	  discovery tool on the lm3s6965-ek board.  From Max Holtberg
	  (2013-5-21).
	* audio/, drivers/audio, include/nuttx/audio:  Added a callback interface
	  to the Audio upperhalf driver for dequeueing, reporting async events,
	  etc. Also included is some initial work for the VS1053 driver.  From
	  Ken Pettit (2013-5-21).
	* include/nuttx/audio/audio.h:  Moved from include/nuttx/ to include/nuttx/audio.
	  (2013-5-21).
	* configs/lm3s6965-ek/tcpecho: This configuration builds the simple TCP
	  echo example based on W.Richard Steven UNIX Programming book to ensure
	  correct usage of the socket API. Contributed by Max Holtzberg (2013-5-22).
	* configs/stm32ldiscovery/src/stm32_lcd.c:  Framework for support of the
	  STM32L-Discovery's segment LCD (2013-5-22).
	* fs/fs_poll.c:  Poll setup/teardown logic should ignore invalid (i.e.,
	  negative) file descriptors.  Max Holtzberg (2013-5-23).
	* net/net_poll.c: When readahead data is availalbe, the network poll
	  logic should set POLLIN (or POLLRDNORM), not POLLOUT.  Max Holtzberg
	  (2013-5-23)
	* fs/fs_poll.c:  Actually, it should also set revents == 0. (2013-5-23).
	* libc/misc/lib_slcdencode.c and lib_slcddecode.c:  Add logic to marshal
	  and serialized special SLCD intermixed with normal ASCII data (2013-5-23)
	* configs/stm32ldiscovery/src/stm32_lcd.c:  STM32L-Discovery's segment LCD
	  is code complete but completely untested (2013-5-23).
	* include/nuttx/fs/ioctl.h, include/nuttx/lcd/slcd_codec.h, and
	  configs/stm32ldiscovery/src/stm32_lcd.c:  Add SLCD ioctl commands to get
	  SLCD geometry, set bars, and manage contrast (2013-5-23).
	* configs/stm32ldiscovery/src/stm32_usb.c:  This file and all references
	  to USB removed for the STM32L-Discovery.  While the chip supports a
	  USB device, the board does not (2013-5-24).
	* arch/arm/src/stm32/stm32_lse.c:  Add support for the STM32L CSR register
	  and for the LSE LCD clock source (2013-5-24).
